objects/Exception_Log__c.object
<CustomObject>
    <description>This objects log all exception occurred from different classes.</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Class name on which exception occured</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Exception Message</description>
        <label>Exception Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>Types of Exception</description>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Method name on which exception occured</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who execute the code while exception occurred.</description>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StackTrace_Message__c</fullName>
        <description>Message from Stack Tracke</description>
        <label>StackTrace Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Exception_Message__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Running_User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>ELI-{0000000}</displayFormat>
        <label>Exception Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>